# portkube

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml  stale-branch.yml
src/: main.rs  test_utils.rs
src/kube/: context.rs  mod.rs  services.rs
src/network/: dns.rs  mod.rs  resolver.rs  tun.rs
src/tui/: app.rs  ui.rs
